# microwave

./: Dockerfile  Readme.md  docker-compose.yml  pyproject.toml
.github/workflows/: format.yml  pytest.yml
src/: main.py
src/backend/: config.py
src/backend/api/: microwaves.py  startup.py  websockets.py
src/backend/api/utils/: management.py  microwaves.py
src/backend/crud/: base.py  db.py  redis.py
src/backend/models/: microwaves.py
src/backend/services/: authentication.py  db.py  db_connection.py  management.py
src/frontend/: ui.py
src/tests/: conftest.py
src/tests/backend/api/: test_microwave.py
src/tests/data/: settings.py
templates/: index.html
